优化关键词

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="妹子 福利 看图" />
-  <meta name="description" content="一个看各种爆照的网站">
+  <meta name="keywords" content="知乎福利,豆瓣福利,妹子,爆照" />
+  <meta name="description" content="知乎福利,豆瓣福利,妹子,爆照>
     {% if title %}
     <title>{{ title }} -- 看图君</title>
     {% else %}
