添加搜索页面

--- a/templates/zhihu.html
+++ b/templates/zhihu.html
@@ -10,7 +10,10 @@
     <input type="text" placeholder="输入知乎问题或者收藏夹的完整链接" class="uk-form-width-large" id="insert_url">
     <a onclick="insert_url();return;" class="uk-button">提交</a>
     </div>
-      <p class="uk-text-large">知乎看图 <a href="/index/zone">新版块：捡图</a></p>
+      <p class="uk-text-large">知乎看图
+          <a href="/index/zone">新版块：捡图</a>
+          <a href="/index/search">关键词搜索</a>
+      </p>
       <div class="uk-gird" data-uk-grid-margin>
         <ul class="uk-subnav uk-subnav-pill" data-uk-switcher="{connect:'#switcher-content'}">
             <li class="uk-active" aria-expanded="true"><a href="#">问题</a></li>
