--- a/templates/douban.html
+++ b/templates/douban.html
@@ -1,23 +1,33 @@
 {% extends 'base.html' %}
 {% block mid_content %}
+    <div class="uk-width-1-1">
     <div class="uk-container">
-    <div class="uk-grid" data-uk-grid-margin>
-        {% for i in data %}
+{#    <div class="uk-grid" data-uk-grid-margin>#}
+        {% set data_count = data|length %}
+        {% for i in range(5) %}
+            <div class="uk-grid" data-uk-grid-margin>
+            {% for j in range(4) %}
+                {% if (i * 4 + j + 1) <= data_count %}
+                    {% set per_data = data[i * 4+ j] %}
 
-        <div class="uk-width-medium-1-4">
-            <div class="uk-panel uk-panel-box">
-                 <h3 class="uk-panel-title">
-                     <i class="uk-align-left"><a href="{{ i.author_url }}" class="uk-link-reset">{{ i.author_name }}</a></i>
-                     <i class="uk-align-right"><a href="{{ i.url }}" class="uk-link-reset">跳到豆瓣</a></i>
-                 </h3>
-                    <a href="#">
-                <img src="http://ali.superlin.cc:9999/img/douban?url={{ i.image_url }}" alt="">
-                    </a>
+                    <div class="uk-width-medium-1-4">
+                        <div class="uk-panel uk-panel-box">
+                             <h3 class="uk-panel-title">
+                                 <i class="uk-align-left"><a href="{{ per_data.author_url }}" class="uk-link-reset">{{ per_data.author_name }}</a></i>
+                                 <i class="uk-align-right"><a href="{{ per_data.url }}" class="uk-link-reset">跳到豆瓣</a></i>
+                             </h3>
+                                <a href="#">
+                            <img src="http://ali.superlin.cc:9999/img/douban?url={{ per_data.image_url }}" alt="">
+                                </a>
+                        </div>
+
+                    </div>
+                {% endif %}
+            {% endfor %}
             </div>
-
-        </div>
         {% endfor %}
 
+{#    </div>#}
     </div>
     </div>
     {% if page_count > 1 %}
